1/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList
    9           | VarDec error ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | ε

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | VarDec LB error RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | ID LP error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC

   27 StmtList: Stmt StmtList
   28         | ε

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | Exp error

   36 DefList: Def DefList
   37        | ε

   38 Def: Specifier DecList SEMI
   39    | Specifier error SEMI
   40    | Specifier DecList error

   41 DecList: Dec
   42        | Dec COMMA DecList

   43 Dec: VarDec
   44    | VarDec ASSIGNOP Exp

   45 Exp: Exp ASSIGNOP Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp RELOP Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp STAR Exp
   52    | Exp DIV Exp
   53    | LP Exp RP
   54    | MINUS Exp
   55    | NOT Exp
   56    | ID LP Args RP
   57    | ID LP RP
   58    | Exp LB Exp RB
   59    | Exp DOT ID
   60    | ID
   61    | INT
   62    | FLOAT
   63    | Exp ASSIGNOP error
   64    | LP error RP
   65    | ID LP error RP
   66    | Exp LB error RB
   67    | Exp LB Exp error RB

   68 Args: Exp COMMA Args
   69     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 9 19 22 35 39 40 63 64 65 66 67
    INT <a> (258) 18 61
    FLOAT <a> (259) 62
    ID <a> (260) 14 16 17 20 21 22 56 57 59 60 65
    SEMI <a> (261) 4 5 29 31 38 39
    COMMA <a> (262) 8 23 42 68
    ASSIGNOP <a> (263) 44 45 63
    RELOP <a> (264) 48
    PLUS <a> (265) 49
    MINUS <a> (266) 50 54
    STAR <a> (267) 51
    DIV <a> (268) 52
    AND <a> (269) 46
    OR <a> (270) 47
    DOT <a> (271) 59
    NOT <a> (272) 55
    TYPE <a> (273) 10
    LP <a> (274) 20 21 22 32 33 34 53 56 57 64 65
    RP <a> (275) 20 21 22 32 33 34 53 56 57 64 65
    LB <a> (276) 18 19 58 66 67
    RB <a> (277) 18 19 58 66 67
    LC <a> (278) 12 26
    RC <a> (279) 12 26
    STRUCT <a> (280) 12 13
    RETURN <a> (281) 31
    IF <a> (282) 32 33
    ELSE <a> (283) 33
    WHILE <a> (284) 34
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <a> (32)
        on left: 1
        on right: 0
    ExtDefList <a> (33)
        on left: 2 3
        on right: 1 2
    ExtDef <a> (34)
        on left: 4 5 6
        on right: 2
    ExtDecList <a> (35)
        on left: 7 8 9
        on right: 4 8 9
    Specifier <a> (36)
        on left: 10 11
        on right: 4 5 6 25 38 39 40
    StructSpecifier <a> (37)
        on left: 12 13
        on right: 11
    OptTag <a> (38)
        on left: 14 15
        on right: 12
    Tag <a> (39)
        on left: 16
        on right: 13
    VarDec <a> (40)
        on left: 17 18 19
        on right: 7 8 9 18 19 25 43 44
    FunDec <a> (41)
        on left: 20 21 22
        on right: 6
    VarList <a> (42)
        on left: 23 24
        on right: 20 23
    ParamDec <a> (43)
        on left: 25
        on right: 23 24
    CompSt <a> (44)
        on left: 26
        on right: 6 30
    StmtList <a> (45)
        on left: 27 28
        on right: 26 27
    Stmt <a> (46)
        on left: 29 30 31 32 33 34 35
        on right: 27 32 33 34
    DefList <a> (47)
        on left: 36 37
        on right: 12 26 36
    Def <a> (48)
        on left: 38 39 40
        on right: 36
    DecList <a> (49)
        on left: 41 42
        on right: 38 40 42
    Dec <a> (50)
        on left: 43 44
        on right: 41 42
    Exp <a> (51)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
        on right: 29 31 32 33 34 35 44 45 46 47 48 49 50 51 52 53 54 55 58 59 63 66 67 68 69
    Args <a> (52)
        on left: 68 69
        on right: 56 68


State 0

    0 $accept: • Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE •

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT • OptTag LC DefList RC
   13                | STRUCT • Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program • $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef • ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   11 Specifier: StructSpecifier •

    $default  reduce using rule 11 (Specifier)


State 8

   14 OptTag: ID •
   16 Tag: ID •

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 18


State 10

   13 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end •

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 13

   17 VarDec: ID •
   20 FunDec: ID • LP VarList RP
   21       | ID • LP RP
   22       | ID • LP error RP

    LP  shift, and go to state 19

    $default  reduce using rule 17 (VarDec)


State 14

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 20


State 16

    7 ExtDecList: VarDec •
    8           | VarDec • COMMA ExtDecList
    9           | VarDec • error ExtDecList
   18 VarDec: VarDec • LB INT RB
   19       | VarDec • LB error RB

    error  shift, and go to state 21
    COMMA  shift, and go to state 22
    LB     shift, and go to state 23

    SEMI  reduce using rule 7 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec • CompSt

    LC  shift, and go to state 24

    CompSt  go to state 25


State 18

   12 StructSpecifier: STRUCT OptTag LC • DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 27
    Def              go to state 28


State 19

   20 FunDec: ID LP • VarList RP
   21       | ID LP • RP
   22       | ID LP • error RP

    error   shift, and go to state 29
    TYPE    shift, and go to state 1
    RP      shift, and go to state 30
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 32
    ParamDec         go to state 33


State 20

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 21

    9 ExtDecList: VarDec error • ExtDecList

    ID  shift, and go to state 34

    ExtDecList  go to state 35
    VarDec      go to state 16


State 22

    8 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 34

    ExtDecList  go to state 36
    VarDec      go to state 16


State 23

   18 VarDec: VarDec LB • INT RB
   19       | VarDec LB • error RB

    error  shift, and go to state 37
    INT    shift, and go to state 38


State 24

   26 CompSt: LC • DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 39
    Def              go to state 28


State 25

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 26

   38 Def: Specifier • DecList SEMI
   39    | Specifier • error SEMI
   40    | Specifier • DecList error

    error  shift, and go to state 40
    ID     shift, and go to state 34

    VarDec   go to state 41
    DecList  go to state 42
    Dec      go to state 43


State 27

   12 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 44


State 28

   36 DefList: Def • DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 45
    Def              go to state 28


State 29

   22 FunDec: ID LP error • RP

    RP  shift, and go to state 46


State 30

   21 FunDec: ID LP RP •

    $default  reduce using rule 21 (FunDec)


State 31

   25 ParamDec: Specifier • VarDec

    ID  shift, and go to state 34

    VarDec  go to state 47


State 32

   20 FunDec: ID LP VarList • RP

    RP  shift, and go to state 48


State 33

   23 VarList: ParamDec • COMMA VarList
   24        | ParamDec •

    COMMA  shift, and go to state 49

    $default  reduce using rule 24 (VarList)


State 34

   17 VarDec: ID •

    $default  reduce using rule 17 (VarDec)


State 35

    9 ExtDecList: VarDec error ExtDecList •

    $default  reduce using rule 9 (ExtDecList)


State 36

    8 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 8 (ExtDecList)


State 37

   19 VarDec: VarDec LB error • RB

    RB  shift, and go to state 50


State 38

   18 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 51


State 39

   26 CompSt: LC DefList • StmtList RC

    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 24
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    $default  reduce using rule 28 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 62
    Stmt      go to state 63
    Exp       go to state 64


State 40

   39 Def: Specifier error • SEMI

    SEMI  shift, and go to state 65


State 41

   18 VarDec: VarDec • LB INT RB
   19       | VarDec • LB error RB
   43 Dec: VarDec •
   44    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 66
    LB        shift, and go to state 23

    $default  reduce using rule 43 (Dec)


State 42

   38 Def: Specifier DecList • SEMI
   40    | Specifier DecList • error

    error  shift, and go to state 67
    SEMI   shift, and go to state 68


State 43

   41 DecList: Dec •
   42        | Dec • COMMA DecList

    COMMA  shift, and go to state 69

    $default  reduce using rule 41 (DecList)


State 44

   12 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 12 (StructSpecifier)


State 45

   36 DefList: Def DefList •

    $default  reduce using rule 36 (DefList)


State 46

   22 FunDec: ID LP error RP •

    $default  reduce using rule 22 (FunDec)


State 47

   18 VarDec: VarDec • LB INT RB
   19       | VarDec • LB error RB
   25 ParamDec: Specifier VarDec •

    LB  shift, and go to state 23

    $default  reduce using rule 25 (ParamDec)


State 48

   20 FunDec: ID LP VarList RP •

    $default  reduce using rule 20 (FunDec)


State 49

   23 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 70
    ParamDec         go to state 33


State 50

   19 VarDec: VarDec LB error RB •

    $default  reduce using rule 19 (VarDec)


State 51

   18 VarDec: VarDec LB INT RB •

    $default  reduce using rule 18 (VarDec)


State 52

   61 Exp: INT •

    $default  reduce using rule 61 (Exp)


State 53

   62 Exp: FLOAT •

    $default  reduce using rule 62 (Exp)


State 54

   56 Exp: ID • LP Args RP
   57    | ID • LP RP
   60    | ID •
   65    | ID • LP error RP

    LP  shift, and go to state 71

    $default  reduce using rule 60 (Exp)


State 55

   54 Exp: MINUS • Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 72


State 56

   55 Exp: NOT • Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 73


State 57

   53 Exp: LP • Exp RP
   64    | LP • error RP

    error  shift, and go to state 74
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 75


State 58

   31 Stmt: RETURN • Exp SEMI

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 76


State 59

   32 Stmt: IF • LP Exp RP Stmt
   33     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 77


State 60

   34 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 78


State 61

   30 Stmt: CompSt •

    $default  reduce using rule 30 (Stmt)


State 62

   26 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 79


State 63

   27 StmtList: Stmt • StmtList

    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 24
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    $default  reduce using rule 28 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 80
    Stmt      go to state 63
    Exp       go to state 64


State 64

   29 Stmt: Exp • SEMI
   35     | Exp • error
   45 Exp: Exp • ASSIGNOP Exp
   46    | Exp • AND Exp
   47    | Exp • OR Exp
   48    | Exp • RELOP Exp
   49    | Exp • PLUS Exp
   50    | Exp • MINUS Exp
   51    | Exp • STAR Exp
   52    | Exp • DIV Exp
   58    | Exp • LB Exp RB
   59    | Exp • DOT ID
   63    | Exp • ASSIGNOP error
   66    | Exp • LB error RB
   67    | Exp • LB Exp error RB

    error     shift, and go to state 81
    SEMI      shift, and go to state 82
    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    LB        shift, and go to state 92


State 65

   39 Def: Specifier error SEMI •

    $default  reduce using rule 39 (Def)


State 66

   44 Dec: VarDec ASSIGNOP • Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 93


State 67

   40 Def: Specifier DecList error •

    $default  reduce using rule 40 (Def)


State 68

   38 Def: Specifier DecList SEMI •

    $default  reduce using rule 38 (Def)


State 69

   42 DecList: Dec COMMA • DecList

    ID  shift, and go to state 34

    VarDec   go to state 41
    DecList  go to state 94
    Dec      go to state 43


State 70

   23 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 23 (VarList)


State 71

   56 Exp: ID LP • Args RP
   57    | ID LP • RP
   65    | ID LP • error RP

    error  shift, and go to state 95
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57
    RP     shift, and go to state 96

    Exp   go to state 97
    Args  go to state 98


State 72

   45 Exp: Exp • ASSIGNOP Exp
   46    | Exp • AND Exp
   47    | Exp • OR Exp
   48    | Exp • RELOP Exp
   49    | Exp • PLUS Exp
   50    | Exp • MINUS Exp
   51    | Exp • STAR Exp
   52    | Exp • DIV Exp
   54    | MINUS Exp •
   58    | Exp • LB Exp RB
   59    | Exp • DOT ID
   63    | Exp • ASSIGNOP error
   66    | Exp • LB error RB
   67    | Exp • LB Exp error RB

    STAR  shift, and go to state 87
    DIV   shift, and go to state 88
    DOT   shift, and go to state 91
    LB    shift, and go to state 92

    $default  reduce using rule 54 (Exp)


State 73

   45 Exp: Exp • ASSIGNOP Exp
   46    | Exp • AND Exp
   47    | Exp • OR Exp
   48    | Exp • RELOP Exp
   49    | Exp • PLUS Exp
   50    | Exp • MINUS Exp
   51    | Exp • STAR Exp
   52    | Exp • DIV Exp
   55    | NOT Exp •
   58    | Exp • LB Exp RB
   59    | Exp • DOT ID
   63    | Exp • ASSIGNOP error
   66    | Exp • LB error RB
   67    | Exp • LB Exp error RB

    DOT  shift, and go to state 91
    LB   shift, and go to state 92

    $default  reduce using rule 55 (Exp)


State 74

   64 Exp: LP error • RP

    RP  shift, and go to state 99


State 75

   45 Exp: Exp • ASSIGNOP Exp
   46    | Exp • AND Exp
   47    | Exp • OR Exp
   48    | Exp • RELOP Exp
   49    | Exp • PLUS Exp
   50    | Exp • MINUS Exp
   51    | Exp • STAR Exp
   52    | Exp • DIV Exp
   53    | LP Exp • RP
   58    | Exp • LB Exp RB
   59    | Exp • DOT ID
   63    | Exp • ASSIGNOP error
   66    | Exp • LB error RB
   67    | Exp • LB Exp error RB

    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    RP        shift, and go to state 100
    LB        shift, and go to state 92


State 76
